--- a/package.json
+++ b/package.json
@@ -20,10 +20,11 @@
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
     "@react-navigation/stack": "^6.1.1",
+    "axios": "^0.26.0",
     "expo": "~44.0.0",
     "expo-app-loading": "~1.3.0",
     "expo-asset": "~8.4.4",
-    "expo-constants": "~13.0.0",
+    "expo-constants": "~13.0.1",
     "expo-font": "~10.0.4",
     "expo-linear-gradient": "~11.0.1",
     "expo-linking": "~3.0.0",
