--- a/app.json
+++ b/app.json
@@ -7,7 +7,7 @@
     "slug": "mobile",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
+    "icon": "./assets/images/splash_new.png",
     "scheme": "myapp",
     "userInterfaceStyle": "automatic",
     "splash": {
