--- a/package.json
+++ b/package.json
@@ -16,14 +16,17 @@
   "dependencies": {
     "@expo-google-fonts/montserrat": "^0.2.2",
     "@expo/vector-icons": "^12.0.0",
+    "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
     "@react-navigation/stack": "^6.1.1",
+    "axios": "^0.26.0",
     "expo": "~44.0.0",
     "expo-app-loading": "~1.3.0",
     "expo-asset": "~8.4.4",
-    "expo-constants": "~13.0.0",
+    "expo-constants": "~13.0.1",
+    "expo-device": "~4.1.0",
     "expo-font": "~10.0.4",
     "expo-linear-gradient": "~11.0.1",
     "expo-linking": "~3.0.0",
@@ -38,8 +41,7 @@
     "react-native-screens": "~3.10.1",
     "react-native-svg": "12.1.1",
     "react-native-svg-transformer": "^1.0.0",
-    "react-native-web": "0.17.1",
-    "expo-updates": "~0.11.6"
+    "react-native-web": "0.17.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
