--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "expo-font": "~10.0.4",
     "expo-linear-gradient": "~11.0.3",
     "expo-linking": "~3.0.0",
+    "expo-secure-store": "~11.1.0",
     "expo-splash-screen": "~0.14.0",
     "expo-status-bar": "~1.2.0",
     "expo-updates": "~0.11.6",
