--- a/app.json
+++ b/app.json
@@ -7,11 +7,11 @@
     "slug": "mobile",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/splash_new.png",
+    "icon": "./assets/images/splash.png",
     "scheme": "myapp",
     "userInterfaceStyle": "automatic",
     "splash": {
-      "image": "./assets/images/splash_new.png",
+      "image": "./assets/images/splash.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
@@ -37,7 +37,8 @@
     "web": {
       "favicon": "./assets/images/favicon.png"
     },
-    "sdkVersion": "44.0.0"
+    "sdkVersion": "44.0.0",
+    "description": ""
   },
   "name": "mobile"
 }
