--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "expo": "~44.0.0",
     "expo-app-loading": "~1.3.0",
     "expo-asset": "~8.4.4",
+    "expo-cli": "^5.3.0",
     "expo-constants": "~13.0.1",
     "expo-device": "~4.1.0",
     "expo-font": "~10.0.4",
