--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@react-navigation/native-stack": "^6.1.0",
     "@react-navigation/stack": "^6.1.1",
     "axios": "^0.26.0",
+    "eslint-plugin-react-hooks": "^4.4.0",
     "expo": "~44.0.0",
     "expo-app-loading": "~1.3.0",
     "expo-asset": "~8.4.4",
