--- a/eas.json
+++ b/eas.json
@@ -13,7 +13,15 @@
     "preview3": {
       "developmentClient": true
     },
-    "production": {}
+    "production": {
+      "android": {
+        "buildType": "apk"
+      },
+      "releaseChannel": "production",
+      "env": {
+        "API_URL": "https://altara-customer-play-api.herokuapp.com/api/v1/"
+      }
+    }
   },
   "cli": {
     "version": ">= 0.47.0"
