--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-app-intro-slider": "^4.0.4",
+    "react-native-date-picker": "^4.2.0",
     "react-native-element-dropdown": "^1.8.7",
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "~2.1.0",
