--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@expo-google-fonts/montserrat": "^0.2.2",
     "@expo/vector-icons": "^12.0.0",
     "@react-native-async-storage/async-storage": "~1.15.0",
+    "@react-native-community/datetimepicker": "^6.1.2",
     "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/drawer": "^6.3.1",
     "@react-navigation/native": "^6.0.2",
@@ -29,6 +30,7 @@
     "expo-asset": "~8.4.4",
     "expo-cli": "^5.3.0",
     "expo-constants": "~13.0.1",
+    "expo-dev-client": "~0.8.4",
     "expo-device": "~4.1.0",
     "expo-font": "~10.0.4",
     "expo-linear-gradient": "~11.0.3",
