--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "expo-status-bar": "~1.2.0",
     "expo-updates": "~0.11.6",
     "expo-web-browser": "~10.1.0",
+    "flagged": "^2.0.3",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
