--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
-	"jsx": "react",
-    "strict": true
+  "jsx": "react-jsx",
+    "strict": false
   }
 }
