--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@expo/vector-icons": "^12.0.0",
     "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-native-community/datetimepicker": "^6.1.2",
+    "@react-native-community/netinfo": "7.1.3",
     "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/drawer": "^6.3.1",
     "@react-navigation/native": "^6.0.2",
@@ -33,14 +34,17 @@
     "expo-dev-client": "~0.8.4",
     "expo-device": "~4.1.0",
     "expo-font": "~10.0.4",
+    "expo-image-picker": "~12.0.1",
     "expo-linear-gradient": "~11.0.3",
     "expo-linking": "~3.0.0",
+    "expo-notifications": "^0.14.1",
     "expo-secure-store": "~11.1.0",
     "expo-splash-screen": "~0.14.0",
     "expo-status-bar": "~1.2.0",
     "expo-updates": "~0.11.6",
     "expo-web-browser": "~10.1.0",
     "flagged": "^2.0.3",
+    "pusher-js": "^7.0.6",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
@@ -49,14 +53,14 @@
     "react-native-element-dropdown": "^1.8.7",
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "~2.1.0",
+    "react-native-pusher-push-notifications": "^2.5.2",
     "react-native-reanimated": "~2.3.1",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
     "react-native-simple-radio-button": "^2.7.4",
     "react-native-svg": "^12.1.1",
     "react-native-svg-transformer": "^1.0.0",
-    "react-native-web": "0.17.1",
-    "expo-image-picker": "~12.0.1"
+    "react-native-web": "0.17.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
