--- a/eas.json
+++ b/eas.json
@@ -19,9 +19,9 @@
       },
       "releaseChannel": "production",
       "env": {
-        "API_URL": "https://altara-customer-play-api.herokuapp.com/api/v1/",
-        "APP_ID": "2566",
-        "APP_TOKEN": "3giYD4fJ6e7vESNT5Bwa0F"
+        "API_URL": "https://altara-customer-prod-api.herokuapp.com/api/v1/",
+        "APP_ID": "2568",
+        "APP_TOKEN": "b7ROwPuwXVosJa5x1ctOw9"
       }
     }
   },
