--- a/package.json
+++ b/package.json
@@ -52,8 +52,9 @@
     "react-native-element-dropdown": "^1.8.7",
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "~2.1.0",
-    "react-native-pusher-push-notifications": "^2.5.2",
     "react-native-image-picker": "^4.7.3",
+    "react-native-paper": "^4.12.3",
+    "react-native-pusher-push-notifications": "^2.5.2",
     "react-native-reanimated": "~2.3.1",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
