--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-native-community/datetimepicker": "^6.1.2",
     "@react-native-community/netinfo": "7.1.3",
-    "@react-native-community/slider": "^4.3.0",
     "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/drawer": "^6.3.1",
     "@react-navigation/native": "^6.0.2",
@@ -61,6 +60,7 @@
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
     "react-native-simple-radio-button": "^2.7.4",
+    "react-native-slider": "^0.11.0",
     "react-native-svg": "^12.1.1",
     "react-native-svg-transformer": "^1.0.0",
     "react-native-web": "0.17.1"
