--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "react-native-image-picker": "^4.7.3",
     "react-native-paper": "^4.12.3",
     "react-native-pusher-push-notifications": "^2.5.2",
-    "react-native-reanimated": "^2.13.0",
+    "react-native-reanimated": "~2.8.0",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
     "react-native-simple-radio-button": "^2.7.4",
