--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@expo/vector-icons": "^13.0.0",
     "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-community/datetimepicker": "6.2.0",
+    "@react-native-community/masked-view": "^0.1.11",
     "@react-native-community/netinfo": "9.3.0",
     "@react-navigation/bottom-tabs": "^6.4.1",
     "@react-navigation/drawer": "^6.3.1",
@@ -60,6 +61,7 @@
     "react-native-pusher-push-notifications": "^2.5.2",
     "react-native-reanimated": "~2.9.1",
     "react-native-safe-area-context": "4.3.1",
+    "react-native-safe-area-view": "^1.1.1",
     "react-native-screens": "~3.15.0",
     "react-native-simple-radio-button": "^2.7.4",
     "react-native-slider": "^0.11.0",
