--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "web": "expo start --web",
     "eject": "expo eject",
     "test": "jest --watchAll",
-    "start:wsl": "REACT_NATIVE_PACKAGER_HOSTNAME=$(netsh.exe interface ip show address 'Wi-Fi' | grep '192.168.0.242' | sed -r 's/^.*IP Address:\\W*//') expo start"
+    "start:wsl": "REACT_NATIVE_PACKAGER_HOSTNAME=$(netsh.exe interface ip show address 'Wi-Fi' | grep '192.168.3.242' | sed -r 's/^.*IP Address:\\W*//') expo start"
   },
   "jest": {
     "preset": "jest-expo"
@@ -18,10 +18,10 @@
     "@expo-google-fonts/montserrat": "^0.2.2",
     "@expo/vector-icons": "^13.0.0",
     "@react-native-async-storage/async-storage": "~1.17.3",
-    "@react-native-community/datetimepicker": "6.2.0",
+    "@react-native-community/datetimepicker": "6.1.2",
     "@react-native-community/masked-view": "^0.1.11",
-    "@react-native-community/netinfo": "9.3.0",
-    "@react-navigation/bottom-tabs": "^6.4.1",
+    "@react-native-community/netinfo": "8.2.0",
+    "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/drawer": "^6.3.1",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
@@ -29,54 +29,55 @@
     "axios": "^0.26.0",
     "deprecated-react-native-prop-types": "^2.3.0",
     "eslint-plugin-react-hooks": "^4.4.0",
-    "expo": "^46.0.0",
-    "expo-app-loading": "~2.1.0",
-    "expo-asset": "~8.6.1",
-    "expo-constants": "~13.2.4",
-    "expo-dev-client": "~1.3.1",
-    "expo-device": "~4.3.0",
-    "expo-font": "~10.2.0",
-    "expo-image-picker": "~13.3.1",
-    "expo-linear-gradient": "~11.4.0",
-    "expo-linking": "~3.2.2",
-    "expo-notifications": "~0.16.1",
-    "expo-secure-store": "~11.3.0",
-    "expo-splash-screen": "~0.16.2",
-    "expo-status-bar": "~1.4.0",
-    "expo-updates": "~0.14.7",
-    "expo-web-browser": "~11.0.0",
+    "expo": "^45.0.0",
+    "expo-app-loading": "~2.0.0",
+    "expo-asset": "~8.5.0",
+    "expo-constants": "~13.1.1",
+    "expo-dev-client": "~1.0.1",
+    "expo-device": "~4.2.0",
+    "expo-font": "~10.1.0",
+    "expo-image-picker": "~13.1.1",
+    "expo-linear-gradient": "~11.3.0",
+    "expo-linking": "~3.1.0",
+    "expo-notifications": "~0.15.4",
+    "expo-secure-store": "~11.2.0",
+    "expo-splash-screen": "~0.15.1",
+    "expo-status-bar": "~1.3.0",
+    "expo-updates": "~0.13.4",
+    "expo-web-browser": "~10.2.1",
     "flagged": "^2.0.3",
-    "react": "18.0.0",
-    "react-dom": "18.0.0",
-    "react-native": "0.69.6",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-native": "0.68.2",
     "react-native-app-intro-slider": "^4.0.4",
     "react-native-currency-input": "^1.0.1",
     "react-native-date-picker": "^4.2.0",
     "react-native-dropdown-picker": "^5.4.3",
     "react-native-element-dropdown": "^1.8.7",
     "react-native-elements": "^3.4.2",
-    "react-native-gesture-handler": "~2.5.0",
+    "react-native-gesture-handler": "~2.2.1",
     "react-native-image-picker": "^4.7.3",
     "react-native-paper": "^4.12.5",
     "react-native-pusher-push-notifications": "^2.5.2",
-    "react-native-reanimated": "~2.9.1",
-    "react-native-safe-area-context": "4.3.1",
+    "react-native-reanimated": "~2.8.0",
+    "react-native-safe-area-context": "3.3.2",
     "react-native-safe-area-view": "^1.1.1",
-    "react-native-screens": "~3.15.0",
+    "react-native-screens": "~3.11.1",
     "react-native-simple-radio-button": "^2.7.4",
     "react-native-slider": "^0.11.0",
     "react-native-svg": "12.3.0",
     "react-native-svg-transformer": "^1.0.0",
-    "react-native-web": "~0.18.7"
+    "react-native-vector-icons": "^9.2.0",
+    "react-native-web": "0.17.7"
   },
   "devDependencies": {
-    "@babel/core": "^7.18.6",
-    "@types/react-native": "~0.69.1",
+    "@babel/core": "^7.12.9",
+    "@types/react-native": "~0.67.6",
     "@types/react-native-simple-radio-button": "^2.7.2",
     "jest": "^26.6.3",
-    "jest-expo": "^46.0.0",
+    "jest-expo": "^45.0.0",
     "react-test-renderer": "17.0.1",
-    "typescript": "^4.6.3"
+    "typescript": "~4.3.5"
   },
   "private": true
 }
