--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "@expo-google-fonts/montserrat": "^0.2.2",
     "@expo/vector-icons": "^12.0.0",
     "@react-native-async-storage/async-storage": "~1.15.0",
-    "@react-native-community/datetimepicker": "4.0.0",
-    "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-community/datetimepicker": "^6.1.2",
     "@react-native-community/netinfo": "7.1.3",
     "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/drawer": "^6.3.1",
@@ -29,21 +28,22 @@
     "axios": "^0.26.0",
     "deprecated-react-native-prop-types": "^2.3.0",
     "eslint-plugin-react-hooks": "^4.4.0",
-    "expo": "^44.0.0",
+    "expo": "~44.0.0",
     "expo-app-loading": "~1.3.0",
-    "expo-asset": "~8.4.6",
+    "expo-asset": "~8.4.4",
+    "expo-cli": "^5.3.0",
     "expo-constants": "~13.0.1",
-    "expo-dev-client": "~0.8.6",
+    "expo-dev-client": "~0.8.5",
     "expo-device": "~4.1.0",
     "expo-font": "~10.0.4",
     "expo-image-picker": "~12.0.1",
     "expo-linear-gradient": "~11.0.3",
     "expo-linking": "~3.0.0",
-    "expo-notifications": "~0.14.0",
+    "expo-notifications": "^0.14.1",
     "expo-secure-store": "~11.1.0",
-    "expo-splash-screen": "~0.14.1",
+    "expo-splash-screen": "~0.14.0",
     "expo-status-bar": "~1.2.0",
-    "expo-updates": "~0.11.7",
+    "expo-updates": "~0.11.6",
     "expo-web-browser": "~10.1.0",
     "flagged": "^2.0.3",
     "react": "17.0.1",
@@ -57,7 +57,7 @@
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "~2.1.0",
     "react-native-image-picker": "^4.7.3",
-    "react-native-paper": "^4.12.5",
+    "react-native-paper": "^4.12.3",
     "react-native-pusher-push-notifications": "^2.5.2",
     "react-native-reanimated": "~2.3.1",
     "react-native-safe-area-context": "3.3.2",
@@ -65,17 +65,17 @@
     "react-native-screens": "~3.10.1",
     "react-native-simple-radio-button": "^2.7.4",
     "react-native-slider": "^0.11.0",
-    "react-native-svg": "12.1.1",
+    "react-native-svg": "^12.1.1",
     "react-native-svg-transformer": "^1.0.0",
-    "react-native-vector-icons": "^9.2.0",
     "react-native-web": "0.17.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@types/react": "~17.0.21",
     "@types/react-native": "~0.64.12",
     "@types/react-native-simple-radio-button": "^2.7.2",
     "jest": "^26.6.3",
-    "jest-expo": "^44.0.0",
+    "jest-expo": "~44.0.1",
     "react-test-renderer": "17.0.1",
     "typescript": "~4.3.5"
   },
