--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "expo-updates": "~0.15.6",
     "expo-web-browser": "~12.0.0",
     "flagged": "^2.0.3",
+    "patch-package": "^8.0.0",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.8",
@@ -71,13 +72,17 @@
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
-    "@types/react": "~18.0.24",
-    "@types/react-native": "~0.70.8",
+    "@tsconfig/react-native": "^3.0.2",
+    "@types/jest": "^29.5.5",
+    "@types/react": "~18.0.28",
+    "@types/react-native": "^0.70.15",
     "@types/react-native-simple-radio-button": "^2.7.2",
+    "@types/react-test-renderer": "^18.0.3",
     "jest": "^26.6.3",
     "jest-expo": "^47.0.0",
+    "metro-react-native-babel-preset": "0.72.3",
     "react-test-renderer": "18.1.0",
-    "typescript": "^4.6.3"
+    "typescript": "^4.9.5"
   },
   "private": true
 }
