--- a/app.json
+++ b/app.json
@@ -36,7 +36,14 @@
       "favicon": "./assets/images/icon.png"
     },
     "sdkVersion": "44.0.0",
-    "description": ""
+    "description": "",
+    "packagerOpts": {
+      "hostType": "localhost",
+      "lanType": "ip",
+      "dev": true,
+      "minify": false,
+      "port": 19000
+    }
   },
   "name": "Altara Credit"
 }
