--- a/package.json
+++ b/package.json
@@ -1,80 +1,45 @@
 {
-  "name": "mobile",
-  "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
-  "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web",
-    "eject": "expo eject",
-    "test": "jest --watchAll",
-    "start:wsl": "REACT_NATIVE_PACKAGER_HOSTNAME=$(netsh.exe interface ip show address 'Wi-Fi' | grep '192.168.0.119' | sed -r 's/^.*IP Address:\\W*//') expo start"
-  },
-  "jest": {
-    "preset": "jest-expo"
-  },
-  "dependencies": {
-    "@expo-google-fonts/montserrat": "^0.2.2",
-    "@expo/vector-icons": "^12.0.0",
-    "@react-native-async-storage/async-storage": "~1.15.0",
-    "@react-native-community/datetimepicker": "^6.1.2",
-    "@react-native-community/netinfo": "7.1.3",
-    "@react-navigation/bottom-tabs": "^6.0.5",
-    "@react-navigation/drawer": "^6.3.1",
-    "@react-navigation/native": "^6.0.2",
-    "@react-navigation/native-stack": "^6.1.0",
-    "@react-navigation/stack": "^6.1.1",
-    "axios": "^0.26.0",
-    "eslint-plugin-react-hooks": "^4.4.0",
-    "expo": "~44.0.0",
-    "expo-app-loading": "~1.3.0",
-    "expo-asset": "~8.4.4",
-    "expo-cli": "^5.3.0",
-    "expo-constants": "~13.0.1",
-    "expo-dev-client": "~0.8.5",
-    "expo-device": "~4.1.0",
-    "expo-font": "~10.0.4",
-    "expo-image-picker": "~12.0.1",
-    "expo-linear-gradient": "~11.0.3",
-    "expo-linking": "~3.0.0",
-    "expo-notifications": "^0.14.1",
-    "expo-secure-store": "~11.1.0",
-    "expo-splash-screen": "~0.14.0",
-    "expo-status-bar": "~1.2.0",
-    "expo-updates": "~0.11.6",
-    "expo-web-browser": "~10.1.0",
-    "flagged": "^2.0.3",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-native": "0.64.3",
-    "react-native-app-intro-slider": "^4.0.4",
-    "react-native-currency-input": "^1.0.1",
-    "react-native-date-picker": "^4.2.0",
-    "react-native-element-dropdown": "^1.8.7",
-    "react-native-elements": "^3.4.2",
-    "react-native-gesture-handler": "~2.1.0",
-    "react-native-image-picker": "^4.7.3",
-    "react-native-paper": "^4.12.3",
-    "react-native-pusher-push-notifications": "^2.5.2",
-    "react-native-reanimated": "~2.3.1",
-    "react-native-safe-area-context": "3.3.2",
-    "react-native-screens": "~3.10.1",
-    "react-native-simple-radio-button": "^2.7.4",
-    "react-native-slider": "^0.11.0",
-    "react-native-svg": "^12.1.1",
-    "react-native-svg-transformer": "^1.0.0",
-    "react-native-web": "0.17.1"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "@types/react": "~17.0.21",
-    "@types/react-native": "~0.64.12",
-    "@types/react-native-simple-radio-button": "^2.7.2",
-    "jest": "^26.6.3",
-    "jest-expo": "~44.0.1",
-    "react-test-renderer": "17.0.1",
-    "typescript": "~4.3.5"
-  },
-  "private": true
+    "name": "loan-app",
+    "version": "1.0.0",
+    "main": "node_modules/expo/AppEntry.js",
+    "scripts": {
+        "start": "expo start",
+        "android": "expo start --android",
+        "ios": "expo start --ios",
+        "web": "expo start --web",
+        "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+        "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
+        "format": "prettier --write .",
+        "prepare": "cd .. && husky install frontend/.husky"
+    },
+    "dependencies": {
+        "@types/react": "~17.0.21",
+        "expo": "~49.0.13",
+        "expo-notifications": "~0.14.0",
+        "expo-status-bar": "~1.2.0",
+        "react": "18.2.0",
+        "react-native": "0.72.5",
+        "react-native-svg-transformer": "^1.1.0",
+        "typescript": "~4.3.5"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.20.0",
+        "@typescript-eslint/eslint-plugin": "^6.8.0",
+        "@typescript-eslint/parser": "^6.8.0",
+        "eslint": "^8.51.0",
+        "eslint-config-prettier": "^9.0.0",
+        "eslint-plugin-prettier": "^5.0.1",
+        "eslint-plugin-react": "^7.33.2",
+        "eslint-plugin-react-native": "^4.1.0",
+        "husky": "^8.0.0",
+        "lint-staged": "^15.0.1",
+        "prettier": "^3.0.3"
+    },
+    "lint-staged": {
+        "*.{js,jsx,ts,tsx}": [
+            "eslint --fix",
+            "prettier --write"
+        ]
+    },
+    "private": true
 }
