--- a/package.json
+++ b/package.json
@@ -10,27 +10,38 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
     "format": "prettier --write .",
-    "prepare": "cd .. && husky install frontend/.husky"
+    "prepare": "cd .. && husky install frontend/.husky",
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "@expo-google-fonts/montserrat": "^0.2.3",
+    "@expo/html-elements": "^0.5.1",
     "@miblanchard/react-native-slider": "^2.3.1",
+    "@react-native-community/datetimepicker": "^7.6.1",
     "@react-navigation/bottom-tabs": "^6.5.9",
     "@react-navigation/drawer": "^6.6.4",
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/native-stack": "^6.9.14",
     "@types/react": "~17.0.21",
     "axios": "^1.5.1",
+    "deprecated-react-native-prop-types": "^5.0.0",
     "expo": "~49.0.13",
     "expo-app-loading": "^2.1.1",
     "expo-device": "~5.4.0",
+    "expo-image-picker": "~14.3.2",
     "expo-linear-gradient": "~12.3.0",
+    "expo-linking": "~5.0.2",
     "expo-notifications": "~0.14.0",
+    "expo-secure-store": "~12.3.1",
     "expo-status-bar": "~1.2.0",
+    "expo-web-browser": "~12.3.2",
     "flagged": "^2.0.10",
+    "patch-package": "^8.0.0",
     "react": "18.2.0",
     "react-native": "0.72.5",
+    "react-native-app-intro-slider": "^4.0.4",
     "react-native-currency-input": "^1.1.1",
+    "react-native-element-dropdown": "^2.10.0",
     "react-native-elements": "^3.4.3",
     "react-native-paper": "^5.11.0",
     "react-native-safe-area-context": "^4.7.2",
