--- a/package.json
+++ b/package.json
@@ -26,12 +26,11 @@
     "@react-navigation/drawer": "^6.3.1",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
-    "@react-navigation/stack": "^6.1.1",
     "axios": "^0.26.0",
     "deprecated-react-native-prop-types": "^5.0.0",
     "expo": "~49.0.13",
-    "expo-app-loading": "~2.1.1",
     "expo-asset": "~8.10.1",
+    "expo-build-properties": "~0.8.3",
     "expo-constants": "~14.4.2",
     "expo-dev-client": "~2.4.11",
     "expo-device": "~5.4.0",
@@ -59,8 +58,7 @@
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-svg": "13.9.0",
-    "react-native-svg-transformer": "^1.0.0",
-    "expo-build-properties": "~0.8.3"
+    "react-native-svg-transformer": "^1.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -69,8 +67,6 @@
     "@types/jest": "^29.5.5",
     "@types/node": "^20.8.7",
     "@types/react": "~18.2.14",
-    "@types/react-native-simple-radio-button": "^2.7.2",
-    "@types/react-test-renderer": "^18.0.3",
     "@typescript-eslint/eslint-plugin": "^6.8.0",
     "@typescript-eslint/parser": "^6.8.0",
     "eslint": "^8.51.0",
