--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,4 @@ EXPO_PUBLIC_API_URL="https://altara-customer-play-api.herokuapp.com/api/v1/"
 EXPO_PUBLIC_APP_ID=2566
 EXPO_PUBLIC_APP_TOKEN="app_token"
 EXPO_PUBLIC_PAYSTACK_KEY="pk_test_9c829e9124ec2921d5c73e50f60535d91bf4a0f5"
+EXPO_PUBLIC_PORTAL_API_URL="https://altara-play-api.herokuapp.com/api/"
