--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,5 @@ EXPO_PUBLIC_APP_TOKEN="app_token"
 EXPO_PUBLIC_PAYSTACK_KEY=
 EXPO_PUBLIC_PORTAL_API_URL="https://altara-play-api.herokuapp.com/api/"
 EXPO_PUBLIC_LOAN_APP_KEY="LAAKswUiUtYsj98CXRG0EDrKmF0m2VbkGUwCx64zALrKEY"
+EXPO_PUBLIC_ACCOUNT_EMAIL="accounts@altaracredit.com"
+
